crates/vihaco-parser/tests/compile_errors/pattern_value_multiple_fields_requires_explicit.rs
// SPDX-FileCopyrightText: 2026 The vihaco Authors
// SPDX-License-Identifier: MIT

use vihaco_parser::Parse;

#[derive(Parse)]
#[syntax_class(value)]
struct Value(i64, bool);

fn main() {}
